force-app/main/default/objects/Short_URL__c/Short_URL__c.object-meta.xml
<CustomObject>
    <label>Short URL</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Short URL Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Short URLs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>