force-app/main/default/objects/Short_URL__c/fields/Custom_URL__c.field-meta.xml
<CustomField>
    <fullName>Custom_URL__c</fullName>
    <inlineHelpText>Optional custom shortened URL.</inlineHelpText>
    <label>Custom URL</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>