force-app/main/default/objects/Short_URL__c/fields/Hashed_URL__c.field-meta.xml
<CustomField>
    <fullName>Hashed_URL__c</fullName>
    <label>Hashed URL</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>