force-app/main/default/objects/Short_URL__c/fields/Short_URL__c.field-meta.xml
<CustomField>
    <fullName>Short_URL__c</fullName>
    <formula>if(  AND( Custom_URL__c != null, LEN( Custom_URL__c ) &gt; 0 ), Custom_URL__c,  Hashed_URL__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Short URL</label>
    <type>Text</type>
</CustomField>