force-app/main/default/objects/Short_URL__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <inlineHelpText>URL to shorten.</inlineHelpText>
    <label>URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>